<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/T1_VariousViews"
            android:icon="@drawable/menu_drawer_picture"
            android:title="@string/et_tv_rv_cv" />

        <item
            android:id="@+id/T2_MusicPlayer"
            android:icon="@drawable/menu_drawer_picture"
            android:title="@string/music_player" />

        <item
            android:id="@+id/T3_NewsList"
            android:icon="@drawable/menu_drawer_picture"
            android:title="@string/news_list" />

        <item
            android:id="@+id/T5_GoogleMapsView"
            android:icon="@drawable/menu_drawer_picture"
            android:title="@string/google_maps" />

    </group>
</menu>