<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T3DiskInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvFileSizeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvReadTimeHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvReadTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/read_time"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tvWriteTimeHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFileSizeHeader" />

        <TextView
            android:id="@+id/tvWriteTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/write_time"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tvReadSpeedHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReadTimeHeader" />

        <TextView
            android:id="@+id/tvReadSpeedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/read_speed"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvWriteSpeedHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWriteTimeHeader" />

        <TextView
            android:id="@+id/tvWriteSpeedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/write_speed"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/t3_btn_test_internal_storage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReadSpeedHeader" />

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_mb"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReadTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unknown_sec"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvFileSize" />

        <TextView
            android:id="@+id/tvWriteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unknown_sec"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvReadTime" />

        <TextView
            android:id="@+id/tvReadSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unknown_speed"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvWriteTime" />

        <TextView
            android:id="@+id/tvWriteSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unknown_speed"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvReadSpeed" />

        <Button
            android:id="@+id/t3_btn_test_internal_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:enabled="false"
            android:text="@string/test_internal_storage"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/t3_btn_generate_file_int_st"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <Button
            android:id="@+id/t3_btm_test_external_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:text="@string/test_external_storage"
            app:layout_constraintBottom_toBottomOf="@+id/t3_btn_test_internal_storage"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/t3_btn_test_internal_storage" />

        <Button
            android:id="@+id/t3_btn_generate_file_int_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_file_int_st"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/t3_btn_test_internal_storage"
            app:layout_constraintStart_toStartOf="@id/t3_btn_test_internal_storage" />

        <Button
            android:id="@+id/t3_btm_generate_file_ext_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_file_ext_st"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/t3_btm_test_external_storage"
            app:layout_constraintStart_toStartOf="@id/t3_btm_test_external_storage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>