<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T2PlayListFilterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/t2_spinnerArtist"
        app:layout_constraintEnd_toEndOf="@+id/t2_spinnerArtist"
        app:layout_constraintStart_toStartOf="@+id/t2_spinnerArtist" />

    <Spinner
        android:id="@+id/t2_spinnerArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/t2_spinnerGenre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/t2_spinnerGenre"
        app:layout_constraintEnd_toEndOf="@+id/t2_spinnerGenre"
        app:layout_constraintStart_toStartOf="@+id/t2_spinnerGenre" />

    <Spinner
        android:id="@+id/t2_spinnerGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t2_spinnerArtist"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>